--- a/android app/app/src/main/res/drawable/circlelogo.xml
+++ b/android app/app/src/main/res/drawable/circlelogo.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+
+    <!-- Color de relleno -->
+    <solid android:color="#CC0A00B6" />
+
+    <!-- Borde opcional -->
+    <stroke
+        android:width="0dp"
+        android:color="#0A00B6CC" />
+
+    <!-- Tamaño del círculo (puedes cambiarlo o dejarlo dinámico según el View) -->
+    <size
+        android:width="200dp"
+        android:height="200dp" />
+
+</shape>
