--- a/android app/app/src/main/res/layout/item_categoria.xml
+++ b/android app/app/src/main/res/layout/item_categoria.xml
@@ -11,7 +11,7 @@
         android:id="@+id/nombre_categoria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/design_default_color_primary"
+        android:background="#818181"
         android:padding="12dp"
         android:text="Categoría"
         android:textColor="@android:color/white"
