--- a/android app/app/src/main/res/drawable/fondo_categoria.xml
+++ b/android app/app/src/main/res/drawable/fondo_categoria.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+
     <gradient
-        android:startColor="@color/primary_blue"
-        android:endColor="@color/primary_blue_dark"
+        android:startColor="#673AB7"
+        android:endColor="#673AB7"
         android:angle="45" />
+
     <corners android:radius="25dp" />
+
 </shape>
