--- a/android app/app/src/main/res/values/colors.xml
+++ b/android app/app/src/main/res/values/colors.xml
@@ -26,4 +26,10 @@
     <color name="success_green">#FF4CAF50</color>
     <color name="error_red">#FFF44336</color>
     <color name="warning_amber">#FFFFC107</color>
+    
+    <!-- Colores especiales -->
+    <color name="violet_blue">#FF673AB7</color>
+    <color name="violet_blue_dark">#FF512DA8</color>
+    <color name="add_button_red">#FFE53935</color>
+    <color name="add_button_red_dark">#FFD32F2F</color>
 </resources>
